      provide separate ffmpeg1vpdau and ffmpeg2vdpau instead

    GUI:
    * Fix wrongly sized video window after leaving fullscreen mode
    * Clear screen when switching to fullscreen mode using the x11
      video output driver
    * Command line option -fs is now recognized in addition to the
      GUI option load_fullscreen
    * Use correct visual in OpenGL video output driver for X11

  1.4: "SubCounter" April 18, 2019

    Decoders, demuxers, streams:
    * More pixel formats are supported for VP9, RSCC, Screenpresso
    * pvr:// support for the Hauppauge HD PVR model 1212
    * Speed up detection of mpg format while streaming (limit probe to 4 MB)
    * demuxer: fall back to audio pts if all others are unavailable (#1928)
    * raw video: add support for < 8bpp RGB, support for paletted raw video,
      fix fliped raw video in non-avi containers
    * increase -lavdopts threads limit to 32
    * warn for badly interleaved files, and make -ni more aggressive
    * support GBR pixel formats for HEVC
    * FFmpeg audio decoders: g721, g732
    * FFmpeg video decoders: more Matrox mpeg2 formats (M702-3-4-5), Truemotion
      RT, Matrox Uncompressed SD/HD, BitJazz SheerVideo, YUY2 Lossless Codec
      Apple Pixlet, ScreenPressor, FM Screen Capture Codec
    * FFmpeg IFF video/image decoders: ANIM, ILBM, PBM, RGB8, RGBN

    Fixes:
    * fix more issues reported by Coverity
    * expand error checking, and fix many memleaks
    * fix -subcp enca: with external ASS subtitles (#2281)
    * fix reading of bitmap fonts
    * fix -subdelay applied inverted
    * some fixes for video filter bmovl (#2304, #2308)
    * fix timing of first and last frame (#2315)

    Other:
    * MPlayer can link against OpenSSL instead of GnuTLS for https support
      (Warning: the resulting binary can not be redistributed)
    * OSD: NV12/NV21 support
    * video output xv: NV12/NV21 support
    * video outputs for OSX: fix a few issues with newer OSX versions

    GUI: